# getchoice

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
getchoice/: __init__.py  getchoice.py  selector.py
selector/: cli.py
tests/: __init__.py  test_selector.py
